  and "\fP" escape sequences, inline environments form a stack. Thus after
  executing "\fB...\@{\fR...\@{\fI...\@}...\@}", the current font is "B"
  again, while it would be "I" with "\fB...\fR...\fI...\fP...\fP". Inline
  environments can be used to represent constructs like "<i>...</i>" in
  HTML, which would be translated as "\@{\fI...\@}".
* [nt]roff: An internal problem with paragraph-at-once line breaking mode
  has been fixed; it caused a ".in" or ".ll" command to be ignored under
  rare circumstances.
* [nt]roff: At the end of input in paragraph-at-once line breaking mode,
  make sure that any partial paragraph is flushed before executing other
  termination procedures. The previous failure to do so lead to missing
  output at the end of the document if it did not fit on the current page.
* [nt]roff: ".ev \}" has now been actually fixed (Bugreport by Dirk-Wilhelm
  Peters.)
* -man macros: ".P" is now recognized; it is the same as ".PP".
* Unix 6th Edition manual macro packages have been added.
* -mandoc macros: Recognize Unix 6th Edition pages.

Release 070202
* [nt]roff: The "\J" escape sequence has been introduced to specify a
  default line breaking penalty; useful to discourage line breaks within
  a person's name or a formula. Relative values in the "\j" sequence now
  refer to the default penalty value.
* dpost: A manual page has been added since it has now been released by
  Sun under the CDDL license.
* -man macros: The ".TP" macro has been fixed not to spread the initial
  string. This is particularly for use in combination with "-mpadj" since
  paragraph-at-once line breaking can lead to more spreading in the first
  line.
* [nt]roff: Special characters like "\}" do now terminate environment
  names in arguments to the ".ev" and ".evc" requests as with other names.
  Thus ".ev \}" is no longer misinterpreted as an attempt to change to an
  environment named "\}". (Bugreport by Dirk-Wilhelm Peters.)